# Sem-4-CP

DS/: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1
DS/data/sequences/: sample.fasta
DS/src/: hash_cache.cpp  hash_cache.h  input.cpp  input.h  main.cpp  mmap_reader.cpp  mmap_reader.h  output.cpp  output.h  segment_tree.cpp  segment_tree.h  suffix_array.cpp  suffix_array.h
DS/tests/: test_cache.cpp  test_complement.cpp  test_integration.cpp  test_segment_tree.cpp  test_suffix_array.cpp
OS/Phase-2/: Phase2.cpp  output2.txt
SE&MAD/: pubspec.yaml
SE&MAD/android/app/src/main/: AndroidManifest.xml
SE&MAD/ios/Runner/: Info.plist
SE&MAD/lib/: login.dart  main.dart  profile_screen.dart  splash_screen.dart
SE&MAD/lib/games/: formula_flash.dart  fraction_fields.dart  shape_surge.dart
SE&MAD/linux/runner/: my_application.cc
SE&MAD/macos/Runner/Configs/: AppInfo.xcconfig
SE&MAD/test/: widget_test.dart
SE&MAD/web/: index.html
SE&MAD/windows/runner/: Runner.rc
SEMAD/: .gitignore  README.md  pubspec.yaml
SEMAD/android/app/: build.gradle.kts
SEMAD/android/app/src/main/: AndroidManifest.xml
SEMAD/android/app/src/main/res/values/: colors.xml
SEMAD/ios/Runner.xcodeproj/: project.pbxproj
SEMAD/lib/: login.dart  main.dart  profile_screen.dart  splash_screen.dart  supa.dart  ui_widgets.dart
SEMAD/lib/games/: bazaar_bill.dart  formula_flash.dart  fraction_fields.dart  quick_tick.dart  shape_surge.dart
